jdk11 test fix